force-app/main/default/objects/Education__c/fields/Current_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade__c</fullName>
    <label>Current Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>