force-app/main/default/objects/Education__c/fields/Current_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Grade_Level__c</fullName>
    <label>Current Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Grade 7</fullName>
            </value>
            <value>
                <fullName>Grade 8</fullName>
            </value>
            <value>
                <fullName>Grade 9</fullName>
            </value>
            <value>
                <fullName>Grade 10</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Not in school</fullName>
            </value>
            <value>
                <fullName>Post Secondary Education or Training</fullName>
            </value>
            <value>
                <fullName>Pre School / Head Start</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>