force-app/main/default/objects/Education__c/fields/Date_Last_Attended__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Attended__c</fullName>
    <label>Date Last Attended</label>
    <type>Date</type>
</CustomField>