force-app/main/default/objects/Education__c/fields/Disciplinary_Action__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Action__c</fullName>
    <label>Disciplinary Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>