force-app/main/default/objects/Education__c/fields/Edu_Acomplish_Highest_Grade_Completed__c.field-meta.xml
<CustomField>
    <fullName>Edu_Acomplish_Highest_Grade_Completed__c</fullName>
    <label>Highest Grade Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>