force-app/main/default/objects/Education__c/fields/Education_City__c.field-meta.xml
<CustomField>
    <fullName>Education_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>