force-app/main/default/objects/Education__c/fields/Education_Program__c.field-meta.xml
<CustomField>
    <fullName>Education_Program__c</fullName>
    <label>Education Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GED</fullName>
                <default>true</default>
                <label>GED</label>
            </value>
            <value>
                <fullName>Vocational/ Technical Training</fullName>
            </value>
            <value>
                <fullName>Infant and Toddler</fullName>
            </value>
            <value>
                <fullName>Pre-School/Head Start</fullName>
            </value>
            <value>
                <fullName>Type III</fullName>
            </value>
            <value>
                <fullName>Home and Hospital</fullName>
            </value>
            <value>
                <fullName>College / University</fullName>
            </value>
            <value>
                <fullName>Not in School</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Special Ed</fullName>
            </value>
            <value>
                <fullName>Trade School</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>