force-app/main/default/objects/Education__c/fields/Education_School_Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Education_School_Exit_Reason__c</fullName>
    <label>School Exit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>