force-app/main/default/objects/Education__c/fields/Education_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Education_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>