force-app/main/default/objects/Education__c/fields/Educational_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Educational_Transportation__c</fullName>
    <label>Educational Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School Bus</fullName>
                <default>true</default>
                <label>School Bus</label>
            </value>
            <value>
                <fullName>Drop-off</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Public Transportation</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>