force-app/main/default/objects/Education__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>