force-app/main/default/objects/Education__c/fields/Functioning_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Functioning_Grade_Level__c</fullName>
    <label>Functioning Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grade 1</fullName>
                <default>true</default>
                <label>Grade 1</label>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Grade 7</fullName>
            </value>
            <value>
                <fullName>Grade 8</fullName>
            </value>
            <value>
                <fullName>Grade 9</fullName>
            </value>
            <value>
                <fullName>Grade 10</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Not in school</fullName>
            </value>
            <value>
                <fullName>Post Secondary Education or Training</fullName>
            </value>
            <value>
                <fullName>Pre School / Head Start</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Above Level</fullName>
                <isActive>false</isActive>
                <label>Above Level</label>
            </value>
            <value>
                <fullName>Grade II</fullName>
                <isActive>false</isActive>
                <label>Grade II</label>
            </value>
            <value>
                <fullName>Not on Level</fullName>
                <isActive>false</isActive>
                <label>Not on Level</label>
            </value>
            <value>
                <fullName>On Level</fullName>
                <isActive>false</isActive>
                <label>On Level</label>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
                <isActive>false</isActive>
                <label>Other (Specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>