force-app/main/default/objects/Education__c/fields/IEP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IEP_Start_Date__c</fullName>
    <label>IEP Start Date</label>
    <type>Date</type>
</CustomField>