force-app/main/default/objects/Education__c/fields/Number_of_Days_Absence__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Absence__c</fullName>
    <label>Number of Days Absence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>