force-app/main/default/objects/Education__c/fields/Provider_Location__c.field-meta.xml
<CustomField>
    <fullName>Provider_Location__c</fullName>
    <label>Provider Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>