force-app/main/default/objects/Education__c/fields/Reading_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Reading_Test_Date__c</fullName>
    <label>Reading Test Date</label>
    <type>Date</type>
</CustomField>