force-app/main/default/objects/Education__c/fields/Reading_Test_Level__c.field-meta.xml
<CustomField>
    <fullName>Reading_Test_Level__c</fullName>
    <label>Reading Test Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>