force-app/main/default/objects/Education__c/fields/Record_Received__c.field-meta.xml
<CustomField>
    <fullName>Record_Received__c</fullName>
    <label>Record Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>