force-app/main/default/objects/Education__c/fields/School_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>School_Adjustment__c</fullName>
    <label>School Adjustment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>