force-app/main/default/objects/Education__c/fields/School_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>School_Change_Reason__c</fullName>
    <label>School Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Excused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>