force-app/main/default/objects/Education__c/fields/School_Schedule__c.field-meta.xml
<CustomField>
    <fullName>School_Schedule__c</fullName>
    <label>School Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>