force-app/main/default/objects/Education__c/fields/School_Setting__c.field-meta.xml
<CustomField>
    <fullName>School_Setting__c</fullName>
    <label>School Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>College / University</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Parochial</fullName>
            </value>
            <value>
                <fullName>Vocational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>