force-app/main/default/objects/Education__c/fields/Speciality_Exam__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Exam__c</fullName>
    <label>Speciality Exam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCO</fullName>
            </value>
            <value>
                <fullName>Primary Care Provider</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Eye Doctor</fullName>
            </value>
            <value>
                <fullName>Mental Health Therapist / Counselor</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>MCO Special Needs Coordinator</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>GYN</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>