force-app/main/default/objects/Education__c/fields/Summer_School__c.field-meta.xml
<CustomField>
    <fullName>Summer_School__c</fullName>
    <label>Summer School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>