force-app/main/default/objects/Education__c/fields/X1st_Quarter_Absences__c.field-meta.xml
<CustomField>
    <fullName>X1st_Quarter_Absences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Quarter Absences</label>
    <type>Checkbox</type>
</CustomField>