force-app/main/default/objects/Education__c/fields/X1st_quarter_Performance__c.field-meta.xml
<CustomField>
    <fullName>X1st_quarter_Performance__c</fullName>
    <label>1st quarter Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>