force-app/main/default/objects/Education__c/fields/X2nd_Quarter_Absences__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Quarter_Absences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Quarter Absences</label>
    <type>Checkbox</type>
</CustomField>