force-app/main/default/objects/Education__c/fields/X3rd_Quarter_Absences__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Quarter_Absences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Quarter Absences</label>
    <type>Checkbox</type>
</CustomField>