force-app/main/default/objects/Education__c/fields/X4th_Quarter_Absences__c.field-meta.xml
<CustomField>
    <fullName>X4th_Quarter_Absences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4th Quarter Absences</label>
    <type>Checkbox</type>
</CustomField>